--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,11 +3,22 @@
   "configurations": [
     {
       "name": "C/C++ Runner: Debug Session",
-      "type": "lldb",
+      "type": "cppdbg",
       "request": "launch",
       "args": [],
+      "stopAtEntry": false,
+      "externalConsole": false,
       "cwd": "/home/jowagner/Documents/libft",
-      "program": "/home/jowagner/Documents/libft/build/Debug/outDebug"
+      "program": "/home/jowagner/Documents/libft/build/Debug/outDebug",
+      "MIMode": "gdb",
+      "miDebuggerPath": "gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ]
     }
   ]
 }
